Core/Utilities/Compiler/PyquilCompiler/pyquilParser.cpp

// Generated from .\pyquil.g4 by ANTLR 4.8


#include "Core/Utilities/Compiler/PyquilCompiler/pyquilListener.h"
#include "Core/Utilities/Compiler/PyquilCompiler/pyquilVisitor.h"

#include "Core/Utilities/Compiler/PyquilCompiler/pyquilParser.h"


using namespace antlrcpp;
using namespace antlr4;

pyquilParser::pyquilParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

pyquilParser::~pyquilParser() {
  delete _interpreter;
}

std::string pyquilParser::getGrammarFileName() const {
  return "pyquil.g4";
}

const std::vector<std::string>& pyquilParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& pyquilParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

pyquilParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<pyquilParser::DeclareContext *> pyquilParser::ProgContext::declare() {
  return getRuleContexts<pyquilParser::DeclareContext>();
}

pyquilParser::DeclareContext* pyquilParser::ProgContext::declare(size_t i) {
  return getRuleContext<pyquilParser::DeclareContext>(i);
}

std::vector<pyquilParser::Code_blockContext *> pyquilParser::ProgContext::code_block() {
  return getRuleContexts<pyquilParser::Code_blockContext>();
}

pyquilParser::Code_blockContext* pyquilParser::ProgContext::code_block(size_t i) {
  return getRuleContext<pyquilParser::Code_blockContext>(i);
}


size_t pyquilParser::ProgContext::getRuleIndex() const {
  return pyquilParser::RuleProg;
}

void pyquilParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void pyquilParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


antlrcpp::Any pyquilParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::ProgContext* pyquilParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, pyquilParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(42);
      declare();
      setState(45); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == pyquilParser::T__0);
    setState(48); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(47);
      code_block();
      setState(50); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << pyquilParser::T__1)
      | (1ULL << pyquilParser::T__2)
      | (1ULL << pyquilParser::T__3)
      | (1ULL << pyquilParser::LABEL_LINE)
      | (1ULL << pyquilParser::MODIFY_OP)
      | (1ULL << pyquilParser::GATE1Q)
      | (1ULL << pyquilParser::GATE2Q)
      | (1ULL << pyquilParser::GATE3Q)
      | (1ULL << pyquilParser::GATE1Q1P)
      | (1ULL << pyquilParser::GATE2Q1P))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Code_blockContext ------------------------------------------------------------------

pyquilParser::Code_blockContext::Code_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyquilParser::LoopContext* pyquilParser::Code_blockContext::loop() {
  return getRuleContext<pyquilParser::LoopContext>(0);
}

std::vector<pyquilParser::OperationContext *> pyquilParser::Code_blockContext::operation() {
  return getRuleContexts<pyquilParser::OperationContext>();
}

pyquilParser::OperationContext* pyquilParser::Code_blockContext::operation(size_t i) {
  return getRuleContext<pyquilParser::OperationContext>(i);
}


size_t pyquilParser::Code_blockContext::getRuleIndex() const {
  return pyquilParser::RuleCode_block;
}

void pyquilParser::Code_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCode_block(this);
}

void pyquilParser::Code_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCode_block(this);
}


antlrcpp::Any pyquilParser::Code_blockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitCode_block(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::Code_blockContext* pyquilParser::code_block() {
  Code_blockContext *_localctx = _tracker.createInstance<Code_blockContext>(_ctx, getState());
  enterRule(_localctx, 2, pyquilParser::RuleCode_block);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(58);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pyquilParser::LABEL_LINE: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        loop();
        break;
      }

      case pyquilParser::T__1:
      case pyquilParser::T__2:
      case pyquilParser::T__3:
      case pyquilParser::MODIFY_OP:
      case pyquilParser::GATE1Q:
      case pyquilParser::GATE2Q:
      case pyquilParser::GATE3Q:
      case pyquilParser::GATE1Q1P:
      case pyquilParser::GATE2Q1P: {
        enterOuterAlt(_localctx, 2);
        setState(54); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(53);
                  operation();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(56); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

pyquilParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyquilParser::Loop_startContext* pyquilParser::LoopContext::loop_start() {
  return getRuleContext<pyquilParser::Loop_startContext>(0);
}

pyquilParser::Loop_if_continueContext* pyquilParser::LoopContext::loop_if_continue() {
  return getRuleContext<pyquilParser::Loop_if_continueContext>(0);
}

tree::TerminalNode* pyquilParser::LoopContext::JUMP_LINE() {
  return getToken(pyquilParser::JUMP_LINE, 0);
}

pyquilParser::Loop_endContext* pyquilParser::LoopContext::loop_end() {
  return getRuleContext<pyquilParser::Loop_endContext>(0);
}

std::vector<pyquilParser::OperationContext *> pyquilParser::LoopContext::operation() {
  return getRuleContexts<pyquilParser::OperationContext>();
}

pyquilParser::OperationContext* pyquilParser::LoopContext::operation(size_t i) {
  return getRuleContext<pyquilParser::OperationContext>(i);
}


size_t pyquilParser::LoopContext::getRuleIndex() const {
  return pyquilParser::RuleLoop;
}

void pyquilParser::LoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop(this);
}

void pyquilParser::LoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop(this);
}


antlrcpp::Any pyquilParser::LoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitLoop(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::LoopContext* pyquilParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 4, pyquilParser::RuleLoop);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    loop_start();
    setState(64);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << pyquilParser::T__1)
      | (1ULL << pyquilParser::T__2)
      | (1ULL << pyquilParser::T__3)
      | (1ULL << pyquilParser::MODIFY_OP)
      | (1ULL << pyquilParser::GATE1Q)
      | (1ULL << pyquilParser::GATE2Q)
      | (1ULL << pyquilParser::GATE3Q)
      | (1ULL << pyquilParser::GATE1Q1P)
      | (1ULL << pyquilParser::GATE2Q1P))) != 0)) {
      setState(61);
      operation();
      setState(66);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(67);
    loop_if_continue();
    setState(68);
    match(pyquilParser::JUMP_LINE);
    setState(69);
    loop_end();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Loop_startContext ------------------------------------------------------------------

pyquilParser::Loop_startContext::Loop_startContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pyquilParser::Loop_startContext::LABEL_LINE() {
  return getToken(pyquilParser::LABEL_LINE, 0);
}


size_t pyquilParser::Loop_startContext::getRuleIndex() const {
  return pyquilParser::RuleLoop_start;
}

void pyquilParser::Loop_startContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop_start(this);
}

void pyquilParser::Loop_startContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop_start(this);
}


antlrcpp::Any pyquilParser::Loop_startContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitLoop_start(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::Loop_startContext* pyquilParser::loop_start() {
  Loop_startContext *_localctx = _tracker.createInstance<Loop_startContext>(_ctx, getState());
  enterRule(_localctx, 6, pyquilParser::RuleLoop_start);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(pyquilParser::LABEL_LINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Loop_endContext ------------------------------------------------------------------

pyquilParser::Loop_endContext::Loop_endContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pyquilParser::Loop_endContext::LABEL_LINE() {
  return getToken(pyquilParser::LABEL_LINE, 0);
}


size_t pyquilParser::Loop_endContext::getRuleIndex() const {
  return pyquilParser::RuleLoop_end;
}

void pyquilParser::Loop_endContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop_end(this);
}

void pyquilParser::Loop_endContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop_end(this);
}


antlrcpp::Any pyquilParser::Loop_endContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitLoop_end(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::Loop_endContext* pyquilParser::loop_end() {
  Loop_endContext *_localctx = _tracker.createInstance<Loop_endContext>(_ctx, getState());
  enterRule(_localctx, 8, pyquilParser::RuleLoop_end);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(pyquilParser::LABEL_LINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Loop_if_continueContext ------------------------------------------------------------------

pyquilParser::Loop_if_continueContext::Loop_if_continueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pyquilParser::Loop_if_continueContext::JUMP_UNLESS() {
  return getToken(pyquilParser::JUMP_UNLESS, 0);
}

std::vector<tree::TerminalNode *> pyquilParser::Loop_if_continueContext::SPACES() {
  return getTokens(pyquilParser::SPACES);
}

tree::TerminalNode* pyquilParser::Loop_if_continueContext::SPACES(size_t i) {
  return getToken(pyquilParser::SPACES, i);
}

tree::TerminalNode* pyquilParser::Loop_if_continueContext::LABELNAME() {
  return getToken(pyquilParser::LABELNAME, 0);
}

pyquilParser::Bool_valContext* pyquilParser::Loop_if_continueContext::bool_val() {
  return getRuleContext<pyquilParser::Bool_valContext>(0);
}

tree::TerminalNode* pyquilParser::Loop_if_continueContext::NEWLINE() {
  return getToken(pyquilParser::NEWLINE, 0);
}


size_t pyquilParser::Loop_if_continueContext::getRuleIndex() const {
  return pyquilParser::RuleLoop_if_continue;
}

void pyquilParser::Loop_if_continueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoop_if_continue(this);
}

void pyquilParser::Loop_if_continueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoop_if_continue(this);
}


antlrcpp::Any pyquilParser::Loop_if_continueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitLoop_if_continue(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::Loop_if_continueContext* pyquilParser::loop_if_continue() {
  Loop_if_continueContext *_localctx = _tracker.createInstance<Loop_if_continueContext>(_ctx, getState());
  enterRule(_localctx, 10, pyquilParser::RuleLoop_if_continue);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(pyquilParser::JUMP_UNLESS);
    setState(76);
    match(pyquilParser::SPACES);
    setState(77);
    match(pyquilParser::LABELNAME);
    setState(78);
    match(pyquilParser::SPACES);
    setState(79);
    bool_val();
    setState(80);
    match(pyquilParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperationContext ------------------------------------------------------------------

pyquilParser::OperationContext::OperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pyquilParser::MeasureContext* pyquilParser::OperationContext::measure() {
  return getRuleContext<pyquilParser::MeasureContext>(0);
}

pyquilParser::GateContext* pyquilParser::OperationContext::gate() {
  return getRuleContext<pyquilParser::GateContext>(0);
}

pyquilParser::MoveContext* pyquilParser::OperationContext::move() {
  return getRuleContext<pyquilParser::MoveContext>(0);
}

pyquilParser::SubContext* pyquilParser::OperationContext::sub() {
  return getRuleContext<pyquilParser::SubContext>(0);
}


size_t pyquilParser::OperationContext::getRuleIndex() const {
  return pyquilParser::RuleOperation;
}

void pyquilParser::OperationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOperation(this);
}

void pyquilParser::OperationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOperation(this);
}


antlrcpp::Any pyquilParser::OperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitOperation(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::OperationContext* pyquilParser::operation() {
  OperationContext *_localctx = _tracker.createInstance<OperationContext>(_ctx, getState());
  enterRule(_localctx, 12, pyquilParser::RuleOperation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pyquilParser::T__1: {
        enterOuterAlt(_localctx, 1);
        setState(82);
        measure();
        break;
      }

      case pyquilParser::MODIFY_OP:
      case pyquilParser::GATE1Q:
      case pyquilParser::GATE2Q:
      case pyquilParser::GATE3Q:
      case pyquilParser::GATE1Q1P:
      case pyquilParser::GATE2Q1P: {
        enterOuterAlt(_localctx, 2);
        setState(83);
        gate();
        break;
      }

      case pyquilParser::T__2: {
        enterOuterAlt(_localctx, 3);
        setState(84);
        move();
        break;
      }

      case pyquilParser::T__3: {
        enterOuterAlt(_localctx, 4);
        setState(85);
        sub();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclareContext ------------------------------------------------------------------

pyquilParser::DeclareContext::DeclareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> pyquilParser::DeclareContext::SPACES() {
  return getTokens(pyquilParser::SPACES);
}

tree::TerminalNode* pyquilParser::DeclareContext::SPACES(size_t i) {
  return getToken(pyquilParser::SPACES, i);
}

pyquilParser::Var_nameContext* pyquilParser::DeclareContext::var_name() {
  return getRuleContext<pyquilParser::Var_nameContext>(0);
}

pyquilParser::Var_memContext* pyquilParser::DeclareContext::var_mem() {
  return getRuleContext<pyquilParser::Var_memContext>(0);
}

tree::TerminalNode* pyquilParser::DeclareContext::NEWLINE() {
  return getToken(pyquilParser::NEWLINE, 0);
}


size_t pyquilParser::DeclareContext::getRuleIndex() const {
  return pyquilParser::RuleDeclare;
}

void pyquilParser::DeclareContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclare(this);
}

void pyquilParser::DeclareContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclare(this);
}


antlrcpp::Any pyquilParser::DeclareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitDeclare(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::DeclareContext* pyquilParser::declare() {
  DeclareContext *_localctx = _tracker.createInstance<DeclareContext>(_ctx, getState());
  enterRule(_localctx, 14, pyquilParser::RuleDeclare);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(pyquilParser::T__0);
    setState(89);
    match(pyquilParser::SPACES);
    setState(90);
    var_name();
    setState(91);
    match(pyquilParser::SPACES);
    setState(92);
    var_mem();
    setState(93);
    match(pyquilParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MeasureContext ------------------------------------------------------------------

pyquilParser::MeasureContext::MeasureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> pyquilParser::MeasureContext::SPACES() {
  return getTokens(pyquilParser::SPACES);
}

tree::TerminalNode* pyquilParser::MeasureContext::SPACES(size_t i) {
  return getToken(pyquilParser::SPACES, i);
}

pyquilParser::QbitContext* pyquilParser::MeasureContext::qbit() {
  return getRuleContext<pyquilParser::QbitContext>(0);
}

pyquilParser::Array_itemContext* pyquilParser::MeasureContext::array_item() {
  return getRuleContext<pyquilParser::Array_itemContext>(0);
}

tree::TerminalNode* pyquilParser::MeasureContext::NEWLINE() {
  return getToken(pyquilParser::NEWLINE, 0);
}


size_t pyquilParser::MeasureContext::getRuleIndex() const {
  return pyquilParser::RuleMeasure;
}

void pyquilParser::MeasureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMeasure(this);
}

void pyquilParser::MeasureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMeasure(this);
}


antlrcpp::Any pyquilParser::MeasureContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitMeasure(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::MeasureContext* pyquilParser::measure() {
  MeasureContext *_localctx = _tracker.createInstance<MeasureContext>(_ctx, getState());
  enterRule(_localctx, 16, pyquilParser::RuleMeasure);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(pyquilParser::T__1);
    setState(96);
    match(pyquilParser::SPACES);
    setState(97);
    qbit();
    setState(98);
    match(pyquilParser::SPACES);
    setState(99);
    array_item();
    setState(100);
    match(pyquilParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MoveContext ------------------------------------------------------------------

pyquilParser::MoveContext::MoveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> pyquilParser::MoveContext::SPACES() {
  return getTokens(pyquilParser::SPACES);
}

tree::TerminalNode* pyquilParser::MoveContext::SPACES(size_t i) {
  return getToken(pyquilParser::SPACES, i);
}

pyquilParser::Array_itemContext* pyquilParser::MoveContext::array_item() {
  return getRuleContext<pyquilParser::Array_itemContext>(0);
}

pyquilParser::ExprContext* pyquilParser::MoveContext::expr() {
  return getRuleContext<pyquilParser::ExprContext>(0);
}

tree::TerminalNode* pyquilParser::MoveContext::NEWLINE() {
  return getToken(pyquilParser::NEWLINE, 0);
}


size_t pyquilParser::MoveContext::getRuleIndex() const {
  return pyquilParser::RuleMove;
}

void pyquilParser::MoveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMove(this);
}

void pyquilParser::MoveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMove(this);
}


antlrcpp::Any pyquilParser::MoveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitMove(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::MoveContext* pyquilParser::move() {
  MoveContext *_localctx = _tracker.createInstance<MoveContext>(_ctx, getState());
  enterRule(_localctx, 18, pyquilParser::RuleMove);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(pyquilParser::T__2);
    setState(103);
    match(pyquilParser::SPACES);
    setState(104);
    array_item();
    setState(105);
    match(pyquilParser::SPACES);
    setState(106);
    expr(0);
    setState(107);
    match(pyquilParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubContext ------------------------------------------------------------------

pyquilParser::SubContext::SubContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> pyquilParser::SubContext::SPACES() {
  return getTokens(pyquilParser::SPACES);
}

tree::TerminalNode* pyquilParser::SubContext::SPACES(size_t i) {
  return getToken(pyquilParser::SPACES, i);
}

pyquilParser::Array_itemContext* pyquilParser::SubContext::array_item() {
  return getRuleContext<pyquilParser::Array_itemContext>(0);
}

pyquilParser::ExprContext* pyquilParser::SubContext::expr() {
  return getRuleContext<pyquilParser::ExprContext>(0);
}

tree::TerminalNode* pyquilParser::SubContext::NEWLINE() {
  return getToken(pyquilParser::NEWLINE, 0);
}


size_t pyquilParser::SubContext::getRuleIndex() const {
  return pyquilParser::RuleSub;
}

void pyquilParser::SubContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSub(this);
}

void pyquilParser::SubContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSub(this);
}


antlrcpp::Any pyquilParser::SubContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pyquilVisitor*>(visitor))
    return parserVisitor->visitSub(this);
  else
    return visitor->visitChildren(this);
}

pyquilParser::SubContext* pyquilParser::sub() {
  SubContext *_localctx = _tracker.createInstance<SubContext>(_ctx, getState());
  enterRule(_localctx, 20, pyquilParser::RuleSub);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(pyquilParser::T__3);
    setState(110);
    match(pyquilParser::SPACES);
    setState(111);
    array_item();
    setState(112);
    match(pyquilParser::SPACES);
    setState(113);
    expr(0);
    setState(114);
    match(pyquilParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_nameContext ------------------------------------------------------------------

pyquilParser::Var_nameContext::Var_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pyquilParser::Var_nameContext::STRING() {
  return getToken(pyquilParser::STRING, 0);
}


size_t pyquilParser::Var_nameContext::getRuleIndex() const {
  return pyquilParser::RuleVar_name;
}

void pyquilParser::Var_nameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_name(this);
}

void pyquilParser::Var_nameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pyquilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_name(this);
}

